# MIMO-Channel-Simulation

./: CMakeLists.txt  README.md  header.h  main.cpp  start.sh
utils/: BPSK_modulator.cpp  bit_generator.cpp  calculation_BER.cpp  channel_generator.cpp  demodulation.cpp  mimo_chanel.cpp  theoretical_BER.cpp
